docs/errors/examples/required-env-var-not-set/required-env-var-not-set.grob
// E5801 — env.require called for a variable that is not present in the environment
// Eventual path: docs/errors/examples/required-env-var-not-set/required-env-var-not-set.grob
token := env.require("DEPLOY_TOKEN")
print("Deploying with token for service account")
